Add footer and advertisement banners to index.html
Added footer with company info, quick links, and advertisement banners to enhance user engagement and provide essential information.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,136 @@
     </div>
 </div>
 
+<!-- Footer -->
+<footer class="bg-slate-900 border-t border-slate-800 mt-12">
+    <div class="max-w-7xl mx-auto px-6 py-12">
+        <div class="grid md:grid-cols-4 gap-8 mb-8">
+            <!-- Company Info -->
+            <div class="md:col-span-2">
+                <div class="flex items-center gap-3 mb-4">
+                    <div class="bg-purple-600 p-2 rounded-lg">
+                        <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"/>
+                        </svg>
+                    </div>
+                    <h3 class="text-white font-bold text-xl">CryptoVault</h3>
+                </div>
+                <p class="text-slate-400 text-sm mb-4 leading-relaxed">
+                    Your trusted cryptocurrency wallet platform. Secure, fast, and reliable digital asset management for the modern investor.
+                </p>
+                <div class="space-y-2 text-sm">
+                    <div class="flex items-start gap-2">
+                        <svg class="w-4 h-4 text-purple-400 mt-0.5 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
+                        </svg>
+                        <div>
+                            <p class="text-slate-300 font-semibold">Corporate Address:</p>
+                            <p class="text-slate-400">125 Blockchain Avenue, Suite 400<br>San Francisco, CA 94105, United States</p>
+                        </div>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <svg class="w-4 h-4 text-purple-400 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+                        </svg>
+                        <div>
+                            <p class="text-slate-300 font-semibold">Email: <span class="text-purple-400">support@cryptovault.com</span></p>
+                        </div>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <svg class="w-4 h-4 text-purple-400 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+                        </svg>
+                        <div>
+                            <p class="text-slate-300 font-semibold">Phone: <span class="text-purple-400">+1 (415) 555-0100</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Quick Links -->
+            <div>
+                <h4 class="text-white font-semibold mb-4">Company</h4>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="#" class="text-slate-400 hover:text-purple-400 transition">About Us</a></li>
+                    <li><a href="#" class="text-slate-400 hover:text-purple-400 transition">Careers</a></li>
+                    <li><a href="#" class="text-slate-400 hover:text-purple-400 transition">Press Kit</a></li>
+                    <li><a href="#" class="text-slate-400 hover:text-purple-400 transition">Blog</a></li>
+                </ul>
+            </div>
+
+            <!-- Legal -->
+            <div>
+                <h4 class="text-white font-semibold mb-4">Legal</h4>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="#" class="text-slate-400 hover:text-purple-400 transition">Privacy Policy</a></li>
+                    <li><a href="#" class="text-slate-400 hover:text-purple-400 transition">Terms of Service</a></li>
+                    <li><a href="#" class="text-slate-400 hover:text-purple-400 transition">Cookie Policy</a></li>
+                    <li><a href="#" class="text-slate-400 hover:text-purple-400 transition">Compliance</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Licenses & Certifications -->
+        <div class="border-t border-slate-800 pt-8 mb-8">
+            <h4 class="text-white font-semibold mb-4 text-sm">Licenses & Regulations</h4>
+            <div class="grid md:grid-cols-3 gap-4 text-xs">
+                <div class="bg-slate-800 p-4 rounded-lg border border-slate-700">
+                    <div class="flex items-center gap-2 mb-2">
+                        <svg class="w-5 h-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"/>
+                        </svg>
+                        <p class="text-white font-semibold">FinCEN Registered</p>
+                    </div>
+                    <p class="text-slate-400">MSB Registration: 31000198765432</p>
+                </div>
+                <div class="bg-slate-800 p-4 rounded-lg border border-slate-700">
+                    <div class="flex items-center gap-2 mb-2">
+                        <svg class="w-5 h-5 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"/>
+                        </svg>
+                        <p class="text-white font-semibold">SOC 2 Type II Certified</p>
+                    </div>
+                    <p class="text-slate-400">Security Audit: 2025-Q1</p>
+                </div>
+                <div class="bg-slate-800 p-4 rounded-lg border border-slate-700">
+                    <div class="flex items-center gap-2 mb-2">
+                        <svg class="w-5 h-5 text-purple-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"/>
+                        </svg>
+                        <p class="text-white font-semibold">ISO 27001 Compliant</p>
+                    </div>
+                    <p class="text-slate-400">Information Security Management</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Bottom Bar -->
+        <div class="border-t border-slate-800 pt-6 flex flex-col md:flex-row justify-between items-center gap-4">
+            <p class="text-slate-400 text-sm">
+                © 2025 CryptoVault Technologies Inc. All rights reserved.
+            </p>
+            <div class="flex gap-4">
+                <a href="#" class="text-slate-400 hover:text-white transition">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/>
+                    </svg>
+                </a>
+                <a href="#" class="text-slate-400 hover:text-white transition">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                    </svg>
+                </a>
+                <a href="#" class="text-slate-400 hover:text-white transition">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
+
 <!-- Registration Screen -->
 <div id="registerScreen" class="hidden flex items-center justify-center min-h-screen p-6">
     <div class="bg-slate-800 border border-slate-700 rounded-2xl p-8 w-full max-w-md">
@@ -344,10 +474,90 @@
                 </button>
             </div>
 
+            <!-- Advertisement Banner 1 -->
+            <div class="bg-gradient-to-r from-blue-600 to-cyan-600 rounded-xl p-6 mb-6 border border-blue-500 cursor-pointer hover:shadow-2xl transition">
+                <div class="flex items-center justify-between">
+                    <div class="flex-1">
+                        <p class="text-blue-200 text-xs font-semibold mb-1">SPONSORED</p>
+                        <h4 class="text-white font-bold text-lg mb-2">🚀 Trade Crypto with Zero Fees</h4>
+                        <p class="text-blue-100 text-sm mb-3">Join CryptoExchange Pro and get $50 bonus on your first trade. Limited time offer!</p>
+                        <button class="bg-white text-blue-600 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-blue-50 transition">
+                            Claim Bonus →
+                        </button>
+                    </div>
+                    <div class="hidden md:block ml-6">
+                        <div class="bg-white/20 backdrop-blur-sm rounded-lg p-4">
+                            <svg class="w-16 h-16 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Recent Transactions -->
-            <div class="bg-slate-800 rounded-xl p-6 border border-slate-700">
+            <div class="bg-slate-800 rounded-xl p-6 border border-slate-700 mb-6">
                 <h3 class="text-xl font-bold text-white mb-4">Recent Transactions</h3>
                 <div class="space-y-3" id="transactions"></div>
+            </div>
+
+            <!-- Advertisement Banner 2 -->
+            <div class="bg-gradient-to-r from-orange-600 to-red-600 rounded-xl p-6 mb-6 border border-orange-500 cursor-pointer hover:shadow-2xl transition">
+                <div class="flex items-center justify-between">
+                    <div class="flex-1">
+                        <p class="text-orange-200 text-xs font-semibold mb-1">PARTNER OFFER</p>
+                        <h4 class="text-white font-bold text-lg mb-2">💰 Earn 12% APY on Your Crypto</h4>
+                        <p class="text-orange-100 text-sm mb-3">Stake your crypto with BlockYield and earn passive income. Secure & trusted by 2M+ users.</p>
+                        <button class="bg-white text-orange-600 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-orange-50 transition">
+                            Start Earning →
+                        </button>
+                    </div>
+                    <div class="hidden md:block ml-6">
+                        <div class="bg-white/20 backdrop-blur-sm rounded-lg p-4">
+                            <svg class="w-16 h-16 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Market News Section -->
+            <div class="bg-slate-800 rounded-xl p-6 border border-slate-700">
+                <div class="flex items-center justify-between mb-4">
+                    <h3 class="text-xl font-bold text-white">Crypto Market News</h3>
+                    <span class="text-xs text-slate-400">SPONSORED</span>
+                </div>
+                <div class="space-y-3">
+                    <div class="bg-slate-900 p-4 rounded-lg cursor-pointer hover:bg-slate-700 transition">
+                        <div class="flex gap-3">
+                            <div class="bg-green-500/20 p-2 rounded-lg h-fit">
+                                <svg class="w-6 h-6 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"/>
+                                </svg>
+                            </div>
+                            <div class="flex-1">
+                                <p class="text-white font-semibold text-sm mb-1">Bitcoin Surges Past $45K</p>
+                                <p class="text-slate-400 text-xs">Institutional investors drive BTC to new yearly highs as ETF approval speculation grows.</p>
+                                <p class="text-green-400 text-xs mt-2">+8.5% today</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-slate-900 p-4 rounded-lg cursor-pointer hover:bg-slate-700 transition">
+                        <div class="flex gap-3">
+                            <div class="bg-blue-500/20 p-2 rounded-lg h-fit">
+                                <svg class="w-6 h-6 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                                </svg>
+                            </div>
+                            <div class="flex-1">
+                                <p class="text-white font-semibold text-sm mb-1">Ethereum 2.0 Upgrade Complete</p>
+                                <p class="text-slate-400 text-xs">Major network upgrade promises 99% reduction in energy consumption and faster transactions.</p>
+                                <p class="text-blue-400 text-xs mt-2">Read more →</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -379,12 +589,15 @@
 </div>
 
 <script>
-    // Firebase Configuration (You need to replace with your own)
+    // Firebase Configuration
     const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "YOUR_PROJECT.firebaseapp.com",
-        databaseURL: "https://YOUR_PROJECT.firebaseio.com",
-        projectId: "YOUR_PROJECT_ID"
+        apiKey: "AIzaSyD_nKzc_5swvqzvh5xbpWrl47E3ru6STKk",
+        authDomain: "cryptovault-wallet-d344c.firebaseapp.com",
+        databaseURL: "https://cryptovault-wallet-d344c-default-rtdb.firebaseio.com",
+        projectId: "cryptovault-wallet-d344c",
+        storageBucket: "cryptovault-wallet-d344c.firebasestorage.app",
+        messagingSenderId: "403255737984",
+        appId: "1:403255737984:web:8cfd9e991e1ce5129d7065"
     };
 
     // Initialize Firebase (if config is provided)
@@ -498,9 +711,24 @@
             transactions: []
         };
 
-        // Save to Firebase if configured
+        // Save to Firebase
         if (database) {
-            database.ref('users/' + email.replace(/[.@]/g, '_')).set(users[email]);
+            const userKey = email.replace(/[.@]/g, '_');
+            database.ref('users/' + userKey).set({
+                name: name,
+                email: email,
+                password: password, // Note: In production, NEVER store plain passwords!
+                avatar: initials,
+                address: users[email].address,
+                role: 'user',
+                balances: { btc: 0, eth: 0, usdt: 0 },
+                transactions: [],
+                createdAt: new Date().toISOString()
+            }).then(() => {
+                console.log('User saved to Firebase successfully!');
+            }).catch((error) => {
+                console.error('Firebase error:', error);
+            });
         }
 
         alert('Account created successfully! Please login.');
